--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,14 +12,13 @@ name: Quarto Publish
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+    container:
+      image: djanen1979/david-awam-jansen.github.io:latest
+      volumes: -v "${{ github.workspace }}:/." 
     permissions:
       contents: write
     steps:
       - name: Check out repository-projects
         uses: actions/checkout@v2 
-      - name: Run Docker container to compile assets
-        run: |
-          docker run --rm \
-            -v "${{ github.workspace }}:/workspace" \
-            -v "/usr/local/lib/R/site-library:/usr/local/lib/R/site-library" \
-            djanen1979/david-awam-jansen.github.io:latest
+      - name: check contents
+        run: ls -l ${{ github.workspace }}  
