--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: djanen1979/david-awam-jansen.github.io:latest
-        volumes: - "${{ github.workspace }}:/." 
+        volumes: 
+          - "${{ github.workspace }}:/." 
     permissions:
       contents: write
     steps:
