--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,9 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
+    - name: Set up Quarto
+      uses: quarto-dev/quarto-actions/setup@v2      
+
     - name: Render and Publish
       uses: quarto-dev/quarto-actions/publish@v2
       with:
