--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,13 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    - name: Set up Quarto
-      uses: quarto-dev/quarto-actions/setup@v2      
+    - name: Copy R library from container
+      run: |
+        docker cp mydocker:/usr/local/lib/R/site-library/ $HOME/R_packages
+
+    - name: Set up R environment
+      run: |
+        echo "R_LIBS=$HOME/R_packages:/usr/local/lib/R/site-library:/usr/lib/R/site-library:/usr/lib/R/library" >> $GITHUB_ENV
 
     - name: Render and Publish
       uses: quarto-dev/quarto-actions/publish@v2
