--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,9 @@ jobs:
         image: djanen1979/david-awam-jansen.github.io:latest
 
     steps:
+    - name: Start Docker container
+      run: docker start mydocker || true  # Start the container if not already running 
+
     - name: Check out repository
       uses: actions/checkout@v2
 
