--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       run: |
         echo "R_LIBS=$HOME/R_packages:/usr/local/lib/R/site-library:/usr/lib/R/site-library:/usr/lib/R/library" >> $GITHUB_ENV
 
+    - name: Set up Quarto
+      uses: quarto-dev/quarto-actions/setup@v2        
+
     - name: Render and Publish
       uses: quarto-dev/quarto-actions/publish@v2
       with:
