--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,40 +1,42 @@
-name: R Package Workflow
-
 on:
+  workflow_dispatch:
   push:
-    branches:
-      - main
-      - _quarto.yml
-      - .github/workflows/publish.yml       
+    branches: main
+    paths:
+      - '**/*.qmd'
+      - _quarto.ylm
+
+name: Quarto Publish
 
 jobs:
-  build:
+  build-deploy:
     runs-on: ubuntu-latest
-
-    services:
-      mydocker:
-        image: djanen1979/david-awam-jansen.github.io:latest
-
+    permissions:
+      contents: write
     steps:
-    - name: Check out repository
-      uses: actions/checkout@v2
+      - name: Check out repository
+        uses: actions/checkout@v4
 
-    - name: Copy R library from container
-      run: |
-        docker create --name temp_container djanen1979/david-awam-jansen.github.io:latest
-        docker cp temp_container:/usr/local/lib/R/site-library/ $HOME/R_packages
-        docker rm temp_container
-  
-    - name: Set up R environment
-      run: |
-        echo "R_LIBS=$HOME/R_packages:/usr/local/lib/R/site-library:/usr/lib/R/site-library:/usr/lib/R/library" >> $GITHUB_ENV
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
 
-    - name: Set up Quarto
-      uses: quarto-dev/quarto-actions/setup@v2        
+      - name: Install R
+        uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2.0'
 
-    - name: Render and Publish
-      uses: quarto-dev/quarto-actions/publish@v2
-      with:
-        target: gh-pages
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+           packages:
+            any::knitr
+            any::rmarkdown
+            any::downlit
+            any::xml2
+            any::tidyverse
+
+      - name: Render and Publish
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
