--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,3 +1,5 @@
+name: Quarto Publish GH pages
+
 on:
   workflow_dispatch:
   push:
@@ -6,13 +8,16 @@ on:
       - '**/*.qmd'
       - _quarto.ylm
 
-name: Quarto Publish
-
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+
+    services:
+      mydocker:
+        image: djanen1979/david-awam-jansen.github.io:latest      
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
