--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,8 +11,12 @@ website:
         url: qmd_files/index.qmd
       - text: About
         url: qmd_files/about.qmd 
-      - text: Simple R
-        url: qmd_files/simple_R.qmd                       
+      - text: Publications
+        url: qmd_files/publications.qmd         
+      - text: Workshops
+        submenu:
+          - text: Simple R
+            url: qmd_files/simple_R.qmd              
 
 format:
   html:
