--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,10 +13,11 @@ website:
         url: qmd_files/about.qmd 
       - text: Publications
         url: qmd_files/publications.qmd         
-      - text: Workshops
-        submenu:
-          - text: Simple R
-            url: qmd_files/simple_R.qmd              
+      - text: Simple R
+        url: qmd_files/simple_R.qmd
+      - text: Introduction into Git version control
+        url: qmd_files/git_version_control.qmd
+
 
 format:
   html:
