trying to format sidebar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,19 +7,19 @@ website:
     style: "docked"
     search: true
     contents:
-      - text: Home
-        url: qmd_files/index.qmd
-      - text: About
-        url: qmd_files/about.qmd 
-      - text: Publications
-        url: qmd_files/publications.qmd         
+      - section: "Basic"
+        - text: Home
+         url: qmd_files/index.qmd
+        - text: About
+         url: qmd_files/about.qmd 
+        - text: Publications
+         url: qmd_files/publications.qmd         
     - section: "Wprkshops"
         contents:
           - text: Simple R
             url: qmd_files/simple_R.qmd
           - text: Introduction into Git version control
             url: qmd_files/git_version_control.qmd     
-
 
 format:
   html:
