--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ website:
             url: qmd_files/about.qmd 
           - text: Publications
             url: qmd_files/publications.qmd         
-    - section: "Wprkshops"
+      - section: "Workshops"
         contents:
           - text: Simple R
             url: qmd_files/simple_R.qmd
