--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         image: djanen1979/david-awam-jansen.github.io:latest      
 
     steps:
-      - name: Check out repository
+      - name: Check out the repository
         uses: actions/checkout@v4
 
       - name: Set up Quarto
@@ -35,6 +35,13 @@ jobs:
         run: |
           echo "R_LIBS=$HOME/R_packages:/usr/local/lib/R/site-library:/usr/lib/R/site-library:/usr/lib/R/library" >> $GITHUB_ENV        
 
+      - name: Render and Publish
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 #      - name: Install R
 #        uses: r-lib/actions/setup-r@v2
 #        with:
@@ -47,11 +54,4 @@ jobs:
  #           any::rmarkdown
  #           any::downlit
  #           any::xml2
- #           any::tidyverse
-
-      - name: Render and Publish
-        uses: quarto-dev/quarto-actions/publish@v2
-        with:
-          target: gh-pages
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+ #           any::tidyverse          
