--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,10 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v4
 
+      - name: Print Commit Message
+        run: |
+        echo "The triggering commit message is: ${{ github.event.head_commit.message }}"        
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
