--- a/.github/workflows/message.yml
+++ b/.github/workflows/message.yml
@@ -13,4 +13,5 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Print Commit Message
-        run: echo "The triggering commit message is: ${{ github.event.head_commit.message }}"
+        run: |
+          echo "The triggering commit message is: ${{ github.event.head_commit.message }}"
