add git to sidebar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,8 +19,8 @@ website:
         contents:
           - text: "Introduction ggplot"
             file: ./workshops/intro_into_ggplot.qmd
-          - text: "Simple R" 
-            file: ./workshops/simple_R.qmd
+          - text: "Introduction into git version control 
+            file: ./workshops/git_version_control.qmd
           - text: "Simple v2"
             file: ./workshops/simple_R.qmd
 format:
