--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,11 +29,24 @@ jobs:
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
-      - name: Copy R library from container
-        run: |
-          docker create --name temp_container djanen1979/david-awam-jansen.github.io:latest
-          docker cp temp_container:/usr/local/lib/R/site-library/ $HOME/R_packages
-          docker rm temp_container
+        - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: '4.2.0'  # Or whatever version you need
+
+        - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          packages:
+            any::knitr
+            any::rmarkdown
+            any::downlit
+            any::xml2
+            any::tidyverse
+
+      #- name: Copy R library from container
+      #  run: |
+      #    docker create --name temp_container djanen1979/david-awam-jansen.github.io:latest
+      #    docker cp temp_container:/usr/local/lib/R/site-library/ $HOME/R_packages
+      #    docker rm temp_container
     
       - name: Set up R environment
         run: |
